--- a/package.json
+++ b/package.json
@@ -1,15 +1,43 @@
 import { describe, it, expect } from 'vitest';
-import { render, screen } from '@testing-library/react';
-import App from '../src/App';
+import * as fs from 'fs';
+import * as path from 'path';
 
-describe('App component', () => {
-  it('renders the default Vite + React welcome message indicating successful project initialization', () => {
-    // This test is designed to fail initially because the `App` component
-    // (or '../src/App.tsx' file) is expected not to exist yet,
-    // or not to export a default `App` component as required.
-    // Once the project is initialized and App.tsx is created with the
-    // default Vite + React setup, this test should pass.
-    render(<App />);
-    expect(screen.getByText(/Vite \+ React/i)).toBeInTheDocument();
+const projectRoot = path.resolve(__dirname, '../../');
+const packageJsonPath = path.join(projectRoot, 'package.json');
+
+describe('Project Initialization', () => {
+  it('should verify the package.json reflects a Vite React project with TypeScript and ESLint setup', () => {
+    // Ensure package.json file exists
+    expect(fs.existsSync(packageJsonPath)).toBe(true);
+
+    // Read and parse package.json content
+    const packageJsonContent = fs.readFileSync(packageJsonPath, 'utf-8');
+    const packageJson = JSON.parse(packageJsonContent);
+
+    // Combine dependencies and devDependencies for easier checking
+    const allDependencies = {
+      ...(packageJson.dependencies || {}),
+      ...(packageJson.devDependencies || {}),
+    };
+
+    // Verify core React dependencies
+    expect(allDependencies).toHaveProperty('react');
+    expect(allDependencies).toHaveProperty('react-dom');
+
+    // Verify Vite setup
+    expect(allDependencies).toHaveProperty('vite');
+    expect(allDependencies).toHaveProperty('@vitejs/plugin-react');
+
+    // Verify TypeScript setup
+    expect(allDependencies).toHaveProperty('typescript');
+    expect(allDependencies).toHaveProperty('@types/react');
+    expect(allDependencies).toHaveProperty('@types/react-dom');
+
+    // Verify ESLint setup
+    expect(allDependencies).toHaveProperty('eslint');
+    expect(allDependencies).toHaveProperty('@typescript-eslint/eslint-plugin');
+    expect(allDependencies).toHaveProperty('@typescript-eslint/parser');
+    expect(allDependencies).toHaveProperty('eslint-plugin-react-hooks');
+    expect(allDependencies).toHaveProperty('eslint-plugin-react-refresh');
   });
 });
