feat: Implement package.json to pass tests

--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
-import { render, screen } from '@testing-library/react';
-import { describe, it, expect } from 'vitest';
-import ProjectSetupStatus from '../src/components/ProjectSetupStatus'; // Component does not exist yet, causing initial failure
-
-describe('ProjectSetupStatus', () => {
-  it('should display confirmation of Vite, React, TypeScript, and ESLint setup', () => {
-    render(<ProjectSetupStatus />);
-
-    expect(screen.getByText(/Vite project initialized/i)).toBeInTheDocument();
-    expect(screen.getByText(/React configured/i)).toBeInTheDocument();
-    expect(screen.getByText(/TypeScript enabled/i)).toBeInTheDocument();
-    expect(screen.getByText(/ESLint configured/i)).toBeInTheDocument();
-  });
-});
+{
+  "name": "rtyrtyhfg",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
+  }
+}
