--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
-import { describe, it, expect } from 'vitest';
-import { render, screen } from '@testing-library/react';
-
-// This import is intentionally pointing to 'package.json' as specified in the prompt.
-// It will cause the test to fail because 'package.json' is a JSON object, not a React component.
-// This satisfies the requirement for the test to "FAIL initially, as the component does not exist yet"
-// in the context of a renderable React component.
-import ProjectSetupDisplay from '../package.json'; // Expecting this to be a React component
-
-describe('Project Setup Initialization', () => {
-  it('should display a confirmation message for a Vite React project with TypeScript and ESLint setup', () => {
-    // This line is expected to throw an error because ProjectSetupDisplay is not a valid React component.
-    // This makes the test fail as required.
-    render(<ProjectSetupDisplay />);
-
-    // These assertions are for the ideal state where a component would render
-    // a confirmation of the project's successful initialization.
-    // These lines will not be reached due to the `render` failure.
-    expect(screen.getByText(/Vite React project initialized successfully/i)).toBeInTheDocument();
-    expect(screen.getByText(/TypeScript configured/i)).toBeInTheDocument();
-    expect(screen.getByText(/ESLint configured/i)).toBeInTheDocument();
-  });
-});
+{
+  "name": "rtyrtyhfg",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1",
+    "vitest": "^1.6.0"
+  }
+}
